Wed May 25 08:01:39 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fix flag error for switch from titlecase to lowercase.

	* test/ruby/enc/test_case_mapping.rb: Tests for above error.

Wed May 25 01:13:55 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ec_key_new_from_group): Create a new
	  EC_KEY on given EC group. Extracted from ossl_ec_key_initialize().
	  (ossl_ec_key_s_generate): Added. Create a new EC instance and
	  generate a random private and public key.
	  (ossl_ec_key_initialize): Use ec_key_new_from_group().
	  (Init_ossl_ec): Define the new method EC.generate. This change is
	  for consistency with other PKey types.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb: Test that EC.generate works.

Wed May 25 00:37:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_generate_key): Fix up RDoc.
	  (Init_ossl_ec): Rename EC#generate_key to EC#generate_key!. Make the
	  old name an alias of #generate_key!. This change is for consistency
	  with other PKey types.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb: Use EC#generate_key! instead of
	  EC#generate_key.

Wed May 25 00:23:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_set): check the arity after
	  adjusting argc for an option hash, for optimization in simpler
	  cases.

Wed May 25 00:21:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XCFLAGS): merge flags only for ruby itself from
	  ruby_cflags.

Tue May 24 22:04:15 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_cipher.c (ossl_cipher_set_key, ossl_cipher_set_iv):
	  Reject too long values as well as too short ones. Currently they
	  just truncate the input but this would hide bugs and lead to
	  unexpected encryption/decryption results.

	* test/openssl/test_cipher.rb: Test that Cipher#key= and #iv= reject
	  Strings with invalid length.
